@@ -15,6 +15,8 @@
       - x lab set to time lab by default
     o subjectProfileEvent/subjectProfileLinePlot:
       - shape lab set to color lab if color but not shape var specified
+    o subjectProfileLinePlot:
+      - remove warning if ref var are missing
     o getPageVar:
       - fix when only one var is specified
           o subjectProfileEventPlot:
